--- a/lab/lab1/index.html
+++ b/lab/lab1/index.html
@@ -6,27 +6,103 @@
     <!-- CSS Imports -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css" integrity="sha256-iYUgmrapfDGvBrePJPrMWQZDcObdAcStKBpjP3Az+3s=" crossorigin="anonymous" />
     <!-- Place framework CSS code here. -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <nav class="navbar navbar-default">
-        <div class="container-fluid clearfix">
-          <div class="topright-button" style="float: right">
-            [Add New]
-          </div>
-          <div class="navbar-header">
-            <a href="#">Manufacturers</a>
-          </div>
-        </div>
-      </nav>
+    <!-- Navbar -->
+      <div id="navbar">
+          <ul class="navbar-header">
+            <li> <a href="#" id="navbar-li">Manufacturers</a></li>
+            <li> <a href="#" id="navbar-li">Purchases</a></li>
+            <li> <a href="#" id="navbar-li">Basket Secrets</a></li>
+          </ul>
+      </div>
+
+   <!-- Information bar -->
+    <div id="infobar">
+
+     <div id="title">
+      <h1>Manufacturers</h1>
+     </div>
+
+     <!-- Add New -->
+     <div class="btn-group" id="add-new" style="float: right">
+        <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+         Add New
+        </button>
+     <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">View History</a>
+        <a class="dropdown-item" href="#">Email All Manufacturers</a>
+     </div>
+     </div>
+
+     <!-- search bar -->
+     <div id="searchBar">
+        <input type="text">
+        <button type="submit"></button>
+     </div>
+
+     <!-- information below search bar -->
+    <div id="itembar">
       <div class="item">
         <h2 class="item-heading">Tandy’s Basketweavers</h2>
         <div>490 Freedom Drive<br>
         Philadelphia, PA 19425</div>
-      </div>
+        <!-- model trigger -->
+        <button class="badge badge-danger" type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Low Inventory</button>
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+         <div class="modal-dialog" role="document">
+           <div class="modal-body">
+            <div class="container-fluid">
+              <table>
+               <thead>
+                 <h4 id="warning">This manufacturer has low inventory</h4>
+                 <h2>Tandy's Basketweavers</h2>
+                 <tr>
+                   <th scope="row">Address</th>
+                   <th scope="row">Contact</th>
+                   <th scope="row">Baskets sold in past seven days</th>
+                </tr>
+                <tr>
+                  <td>490 Freedom Drive<br>Philadelphia, 19425</td>
+                  <td>Dave Javis<br>Senior Weaver<br>dj@tbw.com</td>
+                  <td id="big-font">324</td>
+                </tr>
+                 <tr>
+                   <th scope="row">First Name</th>
+                   <th scope="row">Last Name</th>
+                   <th scope="row">Purchase</th>
+                 </tr>
+               </thead>
+               <tbody>
+                 <tr>
+                   <td>Mark</td>
+                   <td>Otto</td>
+                   <td>Fruit Basket</td>
+                 </tr>
+                 <tr>
+                   <td>Jacob</td>
+                   <td>Thornton</td>
+                   <td>Gift Basket</td>
+                 </tr>
+                 <tr>
+                   <td>Larry</td>
+                   <td>The Bird</td>
+                   <td>Easter Basket</td>
+                 </tr>
+               </tbody>
+             </table>
+           </div>
+         </div>
+       </div>
+     </div>
+
+
       <div class="item">
         <h2 class="item-heading">Basket Case</h2>
         <div>400 S 46th Street<br>
@@ -47,17 +123,26 @@
         <div>2542 Walnut Street<br>
         Philadelphia, PA 19107</div>
       </div>
-      <div class="sort">
-        Sort by <span class="sort-option selected">A–Z</span> <span class="sort-option">Inventory</span>
-      </div>
     </div>
+
+      <!-- sort bar -->
+      <div class="sort">
+        Sort by <a href="#" id="sort-option-selected">A-Z</a> <a href="#" id="sort-option">Inventory</a>
+      </div>
+
+    </div>
+
     <!-- Map -->
     <div id="map" class="map"></div>
     <!-- Javascript Imports -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" integrity="sha256-obZACiHd7gkOk9iIL/pimWMTJ4W/pBsKu+oZnSeBIek=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.js" integrity="sha256-CNm+7c26DTTCGRQkM9vp7aP85kHFMqs9MhPEuytF+fQ=" crossorigin="anonymous"></script>
     <!-- Place framework JS code here. -->
     <script src="js/setup.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
   </body>
 </html>
